Estilizando el header responsivo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,10 @@ import Header from '../components/Header.astro';
 ---
 
 <Layout title="Welcome to Astro.">
+	<Header />
 	<div class="h-max mx-32">
-		<Header />
 		<main class="container">
-			<h1 class="text-5xl">Landing page in astro</h1>
+			<h1 class="text-5xl mt-6">Landing page in astro</h1>
 		</main>
 	</div>
 </Layout>
