--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,21 +1,41 @@
 ---
 import Logo from '../images/logo.svg'
+import ArrowDownIcon from '../images/icon-arrow-down.svg'
+import IconMenu from '../images/icon-menu.svg'
+import IconCloseMenu from '../images/icon-close-menu.svg'
 ---
 
-<header class="flex justify-between p-5">
-  <div class="flex gap-10">
-    <img src={Logo} alt="logo">
-    <nav>
-      <ul class="flex gap-6">
-        <li>Features</li>
-        <li>Company</li>
-        <li>Carrers</li>
-        <li>About</li>
-      </ul>
-    </nav>
-  </div>
-  <div class="flex gap-8">
-    <button class="bg-slate-400 px-3 py-1 rounded-md">Login</button>
-    <button class="bg-slate-400 px-3 py-1 rounded-md">Register</button>
+<header class="bg-orange-500 relative flex py-3 justify-between md:py-3 px-10 md:gap-9 md:items-center md:bg-transparent">
+  <img src={Logo} alt="logo">
+  <img src={IconMenu} alt="menu icon" class="md:hidden" width="30" height="30">
+  <div class="absolute right-0 top-0 w-screen h-screen bg-gray-800/80 md:w-[100%] md:relative md:bg-transparent md:h-auto">
+    <div class="relative px-6 pt-16 pb-4 w-64 translate-x-32 md:flex md:justify-between md:items-center bg-Almost-White md:bg-transparent md:w-auto md:p-0 md:translate-x-0">
+      <img src={IconCloseMenu} alt="icon close menu" class="absolute top-5 right-7 md:hidden">
+      <nav>
+        <ul role="list" class="flex flex-col gap-4 md:flex-row md:m-0 md:gap-7 md:justify-center md:items-center">
+          <li class="flex items-center gap-2 md:cursor-pointer md:hover:text-Almost-Black">
+            <h3>Home</h3>  
+            <img src={ArrowDownIcon} alt="Arrow Down icon">
+          </li>
+          <li class="flex items-center gap-2 md:cursor-pointer md:hover:text-Almost-Black">
+            <h3>Company</h3>  
+            <img src={ArrowDownIcon} alt="Arrow Down icon" class="">
+          </li>
+          <li class="flex items-center md:hover:text-Almost-Black"><a href="/">carrers</a></li>
+          <li class="flex items-center md:hover:text-Almost-Black"><a href="/">more</a></li>
+        </ul>
+      </nav>
+      <div class="flex flex-col items-center gap-3 md:flex-row md:gap-10">
+        <a href="/" class="md:hover:text-Almost-Black">Login</a>
+        <a href="/" class="py-2 px-4 rounded-xl border-Medium-Gray border-2 hover:text-Almost-Black hover:border-Almost-Black">register</a>
+      </div>
+    </div>
   </div>
 </header>
+
+<!-- <style>
+  li:hover > h3 + img {
+    transform: rotate(-180deg);
+    transition: transform .3s ease-out;
+  }
+</style> -->
