--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,14 @@ const { title } = Astro.props;
 		<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
-	<body class="text-Medium-Gray bg-Almost-White z-0">
+	<body class="text-Medium-Gray bg-Almost-White z-0 font-Epilogue">
 		<slot />
 	</body>
 </html>
+
+<style>
+	* {
+		margin: 0;
+		box-sizing: border-box;
+	}
+</style>
